# Verified-Telemetry-Device-Sample

./: .gitignore  .gitmodules  LICENSE.txt  NOTICE.txt  README.md
.github/workflows/: AZ3166.yml  STM32L4_L4+.yml  link-check.yml
MXChip/AZ3166/: CMakeLists.txt  azure-pipelines.yml  readme.md
MXChip/AZ3166/app/: CMakeLists.txt  azure_config.h  board_init.c  board_init.h  console.c  main.c  sample_nx_verified_telemetry_init.c  sample_nx_verified_telemetry_init.h  sample_pnp_device_component.c  sample_pnp_device_component.h  sample_pnp_iot_device.c  sample_pnp_verified_telemetry_init.c  sample_pnp_verified_telemetry_init.h  sample_vt_device_driver.c  sample_vt_device_driver.h  screen.c  screen.h  wwd_networking.c
MXChip/AZ3166/app/stm32cubef4/: stm32f4xx_hal_msp.c
MXChip/AZ3166/lib/: CMakeLists.txt
MXChip/AZ3166/lib/stm32cubef4/: CMakeLists.txt
MXChip/AZ3166/lib/stm32cubef4/config/: stm32f4xx_hal_conf.h
STMicroelectronics/STM32L4_L4+/: CMakeLists.txt  CMakePresets.json  azure-pipelines.yml  readme.md
STMicroelectronics/STM32L4_L4+/app/: CMakeLists.txt  README.md  azure_config.h  board_init.c  board_init.h  console.c  main.c  sample_nx_verified_telemetry_init.c  sample_pnp_device_component.c  sample_pnp_device_component.h  sample_pnp_iot_device.c  sample_pnp_verified_telemetry_init.c  sample_pnp_verified_telemetry_init.h  sample_vt_device_driver.c  sample_vt_device_driver.h
STMicroelectronics/STM32L4_L4+/app/stm32cubel4/: stm32l4xx_hal_msp.c
STMicroelectronics/STM32L4_L4+/lib/: CMakeLists.txt
STMicroelectronics/STM32L4_L4+/lib/netxduo/: CMakeLists.txt  nx_user.h
STMicroelectronics/STM32L4_L4+/lib/stm32cubel4/config/: stm32l4xx_hal_conf.h
cmake/: arm-gcc-cortex-toolchain.cmake  utilities.cmake
core/lib/netxduo/addons/azure_iot/: nx_azure_iot_pnp_client.c  nx_azure_iot_pnp_client.h
core/lib/verified-telemetry/: CMakeLists.txt
core/lib/verified-telemetry/inc/core/: vt_api.h  vt_sensor.h
core/lib/verified-telemetry/inc/platform/: vt_port.h
core/lib/verified-telemetry/src/core/: vt_database_evaluate.c  vt_sensor_read.c
core/model/: device.json  gsg.json  readme.md  vTInfo.json
core/src/: CMakeLists.txt  json_utils.c
core/src/azure_iot_nx/: azure_iot_nx_client.c
docs/: using-azure-rtos.md  vTIoTExplorerSample.md
tools/: update_config.ps1
(+8 files in other folders)
